--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,17 @@
   position: sticky;
   top: 0px;
   align-items: center;
-  color: white;
+  color: #06102b;
   font-weight: bold;
   gap: 2rem;
   padding: 0 7rem 0 7rem;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid lightgray;
+  background-color: white;
+  z-index: 10;
+}
+.options a {
+  text-decoration: none;
+  color: #06102b;
 }
 .navbaar.scrolled {
   background-color: white;
@@ -28,18 +34,21 @@
 }
 .content-div {
   position: fixed;
-  z-index: 0;
+  z-index: 2;
   top: 0px;
+  right: 0px;
   height: 100vh;
-  width: 100%;
+  width: 30%;
   background-color: white;
   color: black;
   display: flex;
-  align-items: center;
+  align-items: left;
+  text-align: left !important;
   justify-content: center;
   flex-direction: column;
   font-size: 1.5rem;
   font-weight: bolder;
+  padding-left: 2rem;
 }
 
 .options:hover {
@@ -80,9 +89,9 @@
   justify-content: center;
   align-items: center;
 }
-.link:hover {
+/* .link:hover {
   border-bottom: 4px solid gray;
-}
+} */
 .select-option {
   margin: 0 1rem; /* Adjust margin */
   padding: 0.5rem 1rem; /* Adjust padding */
